//
// Created by alexa on 27/03/2018.
//

#ifndef BLOBENGINE_REACTION_HPP
#define BLOBENGINE_REACTION_HPP

enum Reaction {
	BOUNCE,
	STOP,
	ROLL,
	IGNORE
};

#endif //BLOBENGINE_REACTION_HPP
